# analysis-tools

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
DataProcessor/: DataProcessor.py
EDA/: EDA.py
analysis_tools/: __init__.py  eda.py  metrics.py  modeling.py  preprocessing.py  random.py  utils.py
analysis_tools/DataProcessor/: DataProcessor.py
analysis_tools/EDA/: EDA.py
analysis_tools/common/: __init__.py  config.py  env.py  plot_utils.py  timer.py  util.py  utils.py
docs/: analysis_tools.common.rst  analysis_tools.rst  conf.py  index.rst
docs/_build/doctrees/: analysis_tools.common.doctree  analysis_tools.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  analysis_tools.common.html  analysis_tools.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/analysis_tools/: eda.html  metrics.html  modeling.html  random.html  utils.html
docs/_build/html/_modules/analysis_tools/common/: config.html  plot_utils.html  utils.html
docs/_build/html/_sources/: analysis_tools.common.rst.txt  analysis_tools.rst.txt  modules.rst.txt
examples/1_titanic/: main.ipynb  main.py
examples/titanic/: eda.ipynb  main.ipynb
util/: env.py  util.py
