[tool.poetry]
name = "analysis-tools"
version = "0.3.1"
description = "Analysis tools for machine learning projects"
authors = ["Dongjin Yoon (djyoon0223@gmail.com)"]
readme = "README.md"
packages = [{include = "analysis_tools"}]

[tool.poetry.dependencies]
python = "^3.8"
numba = "^0.57.0"
dask = "^2023.4.1"
scikit-learn = "^1.2.2"
pandas = "^2.0.1"
dtreeviz = "^2.2.1"
joblib = "^1.2.0"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
missingno = "^0.5.2"
switch = "^1.1.0"
tabulate = "^0.9.0"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
